Fixed alignment of group label

--- a/src/WebComponents/PersistentObjectGroup/persistent-object-group.scss
+++ b/src/WebComponents/PersistentObjectGroup/persistent-object-group.scss
@@ -14,7 +14,7 @@
         font-size: 15px;
         font-weight: 600;
         text-transform: uppercase;
-        padding: var(--theme-h4) var(--theme-h5) 0 calc(var(--theme-h5) - 1px);
+        padding: var(--theme-h4) var(--theme-h5) 0 0;
         color: var(--theme-color);
         overflow: hidden;
         white-space: nowrap;
